cmake_minimum_required(VERSION 3.2)
project(pyiforest)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(cpp)
include_directories(cpp)
set(SOURCE_FILES cpp/main.cpp)
#find_package(Armadillo REQUIRED)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/cpp/include")

#include_directories(${ARMADILLO_INCLUDE_DIRS})
add_subdirectory(test)
add_subdirectory(python)
add_executable(pyiforest ${SOURCE_FILES})
target_link_libraries(pyiforest iforestlib ) #${ARMADILLO_LIBRARIES})

#add_subdirectory(pybind11)
#pybind11_add_module(pyiforest pybindwrapper.cpp)
