cmake_minimum_required(VERSION 3.2)
project(pyiforest)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#if (UNIX)
#add_definitions(-DSERIALIZATION=true)
#endif (UNIX)
#if (WIN32)
#endif(WIN32)
add_subdirectory(src)
include_directories(src)
set(SOURCE_FILES src/main.cpp)
#find_package(Armadillo REQUIRED)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src/include")

#include_directories(${ARMADILLO_INCLUDE_DIRS})
enable_testing()
add_subdirectory(test/lib/googletest)
add_subdirectory(test/unittest)
#add_subdirectory(test)
#add_subdirectory(python)
add_executable(iforest ${SOURCE_FILES})
target_link_libraries(iforest iforestlib ) #${ARMADILLO_LIBRARIES})

#add_subdirectory(pybind11)
#pybind11_add_module(pyiforest pybindwrapper.src)
