project(pyiforest)
add_definitions(-std=c++11)
set(HEADER_FILES Tree.hpp Forest.hpp IsolationForest.hpp utility.hpp main.hpp  FacadeForest.hpp metric.hpp)
set(SOURCE_FILES Tree.cpp Forest.cpp IsolationForest.cpp utility.cpp FacadeForest.cpp metric.cpp main.cpp stat/IOParser.cpp stat/IOParser.hpp featureContribution.hpp LogWriter.cpp LogWriter.hpp commandparser.hpp commandparser.cpp.cpp)
#add_subdirectory(Eigen)
include_directories(include)
add_library(iforestlib STATIC ${SOURCE_FILES} ${HEADER_FILES})
